# Reflection-Refraction-less-Ronpa-Raytracing-Renderer

./: .gitignore  CMakeLists.txt  LICENSE  README.md
anim_script/: GLSLJinja.py  particle_DF_with_motion.py  particle_DF_with_motion.vert.tmpl  particle_DF_with_motion_tdf17.py  testGLSLJinja.frag.tmpl  testGLSLJinja.py  testGLSLJinja.vert.tmpl
etc/: Reflection-Refraction-less-Ronpa-Raytracing-Renderer.odp  RendererFor99PercentOfUniverse.odp  batchRIshader.odp  readme.txt  test.png.ppm
projectVC2012/: batchRIshader.sln  batchRIshader.vcxproj  batchRIshader.vcxproj.filters
projectVC2013/: batchRIshader.sln  batchRIshader.vcxproj
shaders/: grid_fullscr.frag  main_shader.frag  noise.s  particle.frag  particle.vert  particle_DF.frag  particle_DF.vert  particle_DF_with_motion.vert  particle_simple.vert  particle_star.frag  particle_starship.vert  random_dots.vert  tdf17bg.frag  test.bat  test_frag_shader.frag  test_shader2.frag  test_simplexnoise3d.frag  vary_color.frag
shaders/include/: HSV.s  constants.s  particle.s  philox.s  simplexnoise2d.s  simplexnoise3d.s  simplexnoise_common.s
src/: batchRIshader.cpp  cstd_shader.cpp  cstd_shader.hpp  custom_directives.hpp  frame_buffer_object.cpp  frame_buffer_object.hpp  gl_common.hpp  glcontext.cpp  glcontext.hpp  glcontext_egl.cpp  glcontext_glx.cpp  glcontext_wgl.cpp  glsl_preprocessor.hpp  image_file.cpp  image_file.hpp  main_shader.frag  options.cpp  options.hpp  particle.frag  particle.vert  renderer.cpp  renderer.hpp  shader.cpp  shader.hpp
